Bug Fix JPA Streamer Config🫸🌀✏️📗🐧🐳⬆